# py-expr

./: .gitignore  LICENSE  README.md  main.py  pyexpr.py  pyproject.toml  test_expr.py
examples/: block.nc  block2.nc  cases.nc  for-loop.nc  for-loop2.nc  func.nc  if.nc  logic-chain.nc  loop.nc  loop.tc  nested-functions.nc  rule110.nc
nanocalc/: __main__.py  expr.py  lexer.py  parser.py
pyexpr/: __main__.py  common.py  expr.py  parser.py
tests/: test_arithmetic.py  test_expr.py  test_statements.py
utils/: rule110.py
