[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "pyexpr"
version = "0.1.0"
authors = [ { name="Max Isacson" } ]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/maxisacson/py-expr"
Issues = "https://github.com/maxisacson/py-expr/issues"

[project.scripts]
pyexpr = "pyexpr.__main__:main"
