[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "nanocalc"
version = "0.1.0"
authors = [ { name="Max Isacson" } ]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]

[project.urls]
Homepage = "https://github.com/maxisacson/nanocalc-py"
Issues = "https://github.com/maxisacson/nanocalc-py/issues"

[project.scripts]
nc = "nanocalc.__main__:main"
